# EstateWatch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: build-and-push.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_vision_retry_state.py  0003_watchlist_notifications.py
deploy/systemd/: estate-sale-image-pull.service  estate-sale-image-pull.timer  estate-sale-scanner.service  estate-sale-scanner.timer
examples/: watchlists.json
src/estate_sale_finder/: __init__.py  __main__.py  cli.py  config.py  locking.py  logging_config.py  pipeline.py  routing.py  watchlists.py
src/estate_sale_finder/analysis/: base.py  errors.py  local_prefilter.py  mapping.py  mock.py  openai_vision.py  prompts.py
src/estate_sale_finder/db/: migrations.py  models.py  repository.py  session.py
src/estate_sale_finder/domain/: models.py
src/estate_sale_finder/images/: downloader.py  hashing.py  processing.py
src/estate_sale_finder/notifications/: base.py  smtp.py
src/estate_sale_finder/sources/: base.py  estatesales_net.py
src/estate_sale_finder/utils/: dates.py  geo.py  urls.py
tests/contract/: test_estatesales_net.py
tests/fixtures/: sale_page_gallery.html
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_detection_targets.py  test_email.py  test_images.py  test_local_prefilter.py  test_migrations.py  test_openai_vision.py  test_repository.py  test_utils.py  test_vision_mapping.py
(+2 files in other folders)
