[project]
name = "estate-sale-finder"
version = "0.1.0"
description = "Daily estate sale image scanner for camera and golf equipment."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Estate Sale Finder"}]
dependencies = [
  "alembic>=1.13.2",
  "httpx>=0.27.0",
  "imagehash>=4.3.1",
  "jinja2>=3.1.4",
  "pillow>=10.4.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
]

[project.optional-dependencies]
prefilter = ["open-clip-torch>=2.26.1", "torch>=2.3.0"]
dev = [
  "mypy>=1.11.1",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.1",
  "ruff>=0.6.2",
  "types-Pillow>=10.2.0.20240822",
]

[project.scripts]
estate-sale-finder = "estate_sale_finder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/estate_sale_finder"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["imagehash.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
